added border radius 8px to seven pics on around district 7

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -73,32 +73,32 @@ Dave Mathews,
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
+  <img class="img-fluid mx-auto annamaria"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
+  <img class="img-fluid mx-auto bareburger"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./davetalking.jpg" alt="talking with Dave Matthews in Rye">
+  <img class="img-fluid mx-auto davetalking"  src="./davetalking.jpg" alt="talking with Dave Matthews in Rye">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./friendinpark.jpg" alt="Talking in park">
+  <img class="img-fluid mx-auto park"  src="./friendinpark.jpg" alt="Talking in park">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./boiano.jpg" alt="Boiano Bakery">
+  <img class="img-fluid mx-auto boiano"  src="./boiano.jpg" alt="Boiano Bakery">
  </div>
 
-<div class="container mt-5 mb-5">
+<div class="container mt-5 mb-5 cosmo">
  <img class="img-fluid mx-auto"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
 
 
 <div class="container mt-5 mb-5">
- <img class="img-fluid mx-auto"  src="./mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+ <img class="img-fluid mx-auto station"  src="./mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
  
 
