added campaign word in front of email on contact page, added Zelle address

--- a/contact.html
+++ b/contact.html
@@ -144,8 +144,8 @@
     </form>
   </div>
   </div>
-  <div  class="address mt-2 mb-2 mx-auto text-center"><u>Mailing Address: </u><br>Friends of Kurt van Kuller <br>41 Purdy Ave, PO Box 71<br>Rye, NY 10580</div><br></strong>
-  <div class="justify-content-center text-center mx-auto mb-5"><p class="emailclass">email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a></p></div>
+  <div  class="address mt-2 mb-2 mx-auto text-center"><u>Mailing Address: </u><br>Friends of Kurt van Kuller <br>PO Box 71<br>Rye, NY 10580</div><br></strong>
+  <div class="justify-content-center text-center mx-auto mb-5"><p class="emailclass">Campaign email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a><br>Zelle address: treasurerkentvk@gmail.com</p></div>
   
 
   <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
