added brenda and coriander

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -92,6 +92,10 @@ Dave Mathews,
   <img class="img-fluid mx-auto boiano"  src="./boiano.jpg" alt="Boiano Bakery">
  </div>
 
+ <div class="container mt-5 mb-5 coriander">
+  <img class="img-fluid mx-auto"  src="./corainder.JPG" alt="Coriander in Larchmont">
+ </div>
+
 <div class="container mt-5 mb-5 cosmo">
  <img class="img-fluid mx-auto"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
@@ -100,6 +104,9 @@ Dave Mathews,
 <div class="container mt-5 mb-5">
  <img class="img-fluid mx-auto station"  src="./mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
+<div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./brenda.JPG" alt="Brenda">
+ </div>
  
 
 </div>
