moved class of cosmo and coriander for border radius to img to apply rules

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -92,12 +92,12 @@ Dave Mathews,
   <img class="img-fluid mx-auto boiano"  src="./boiano.jpg" alt="Boiano Bakery">
  </div>
 
- <div class="container mt-5 mb-5 coriander">
-  <img class="img-fluid mx-auto"  src="./corainder.JPG" alt="Coriander in Larchmont">
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto coriander"  src="./corainder.JPG" alt="Coriander in Larchmont">
  </div>
 
-<div class="container mt-5 mb-5 cosmo">
- <img class="img-fluid mx-auto"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+<div class="container mt-5 mb-5">
+ <img class="img-fluid mx-auto cosmo"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
 
 
