removed courtesy of my rye in figcaption for rye city hall on the issues page

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -61,7 +61,7 @@
   <div class="container mb-5">
     <figure>
     <img class="img-fluid mx-auto ryecityhall"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
-    <figcaption style="font-size: 0.8rem; text-align: center;">Kurt in Rye City Hall courtesy of myRye.com</figcaption>
+    <figcaption style="font-size: 0.8rem; text-align: center;">Kurt in Rye City Hall</figcaption>
     </figure>
    </div>
   
