added Sculti pics

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -55,19 +55,16 @@
     <img class="img-fluid district7 mx-auto" src="./district7.jpg" alt="Map of District 7"/>
   </div>
 
-   <!--
-  Around District 7
-Map of District 7
+  <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto sculti"  src="./sculti2.jpg" alt="Christine Sculti">
+   </div>
+   
+  <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto sculti"  src="./sculti1.jpg" alt="Christine Sculti">
+   </div>
+  
+    
 
-Anna Marie, 
-Paul Harrison, 
-Dave Mathews, 
- one at Resurrection,
-  one at Rye Free Reading Room, 
-  one at City Hall (courtesy of myRye.com)
-
-
- -->
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
  </div>
