deleted Protect our Latin American neighborhoods that enrich our lives

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -97,7 +97,7 @@
     <h4>PROTECT OUR GREAT QUALITY OF LIFE!</h4>
     <p>Let’s make our streets <span class="uppercase">safer</span> and <i>keep our schools focused on the <span class="uppercase">right priorities</span></i>.</p>
     <ul>
-      <li>End "Sanctuary County" games that risk losing hundreds of millions of dollars in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
+      <li>End "Sanctuary County" games that risk losing hundreds of millions of dollars in federal aid.</li>
       <li>Expand recreational facilities for youth. Continue efforts to clean the Sound.</li>
       <li>Save Playland - Improve County Management.</li>
     </ul>
