replaced bluejacket with palmcard pic

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="container">
-    <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./kurtbluejacket.jpg" alt="Kurt speaking" />
+    <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./palmcard.jpg" alt="Kurt speaking" />
   </div>
 
   <div class="greybg container text-center mb-5">
