added Scappaticci pic

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -69,6 +69,14 @@
   <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
  </div>
 
+
+  <div class="container mt-5 mb-5">
+    <figure>
+  <img class="img-fluid mx-auto annamaria"  src="./scappaticci.jpg" alt="">
+  <figcaption>Honored to march in the Town of Harrison Memorial Day parade with Thomas Scappaticci, Republican candidate for Mayor/Supervisor, a wonderful host. </figcaption>
+  </figure>
+ </div>
+
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto annamaria"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
  </div>
