created whole page for song

--- a/campaignsong.html
+++ b/campaignsong.html
@@ -25,10 +25,9 @@
 
 
 </head>
-
 <body>
-    
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
+<div class="page-wrapper d-flex flex-column min-vh-100">
+ <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
         <div class="container">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,81 +47,63 @@
         </div>
       </nav>
 
-      <div class="container greybgexp mt-4 text-center">
-        <h2>Around District 7</h2>
-      </div>
+<section class="audio-section">
+  <h3>"Vote for van Kuller" by Kent van Kuller</h3>
+  <audio controls class="mt-4">
+    <source src="./voteforvankuller.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+  <div class="mt-4">
+    <p>
+Listen my friends and hear the news<br>
+Once you know Kurt - you just can’t lose
+</p>
 
-  <div class="container mt-5 mb-5 addbgcolor">
-    <img class="img-fluid district7 mx-auto" src="./district7.jpg" alt="Map of District 7"/>
+<p>He’ll stop runaway spending!<br>
+He is not pretending<br>
+He’s a municipal expert<br>
+And his name is Kurt<br>
+</p>
+<p>
+Vote for van Kuller!<br>
+His opponent couldn’t get any duller<br>
+Vote for van Kuller!<br>
+</p>
+<p>
+    <p>
+Why are our taxes so high?<br>
+It makes us all want to cry!<br>
+Mamaroneck, Larchmont, Rye and Harrison<br>
+Take it from his son- he’s the best guy<br>
+</p>
+<p>
+Vote for van Kuller!<br>
+Can we Save Playland? <br>
+Yes he can!<br>
+Vote for van Kuller!<br>
+</p>
+<p>
+We’ve got problems every time it storms<br>
+Headaches filing forms<br>
+The lack of action is beyond belief<br>
+Let’s elect Kurt to find relief!<br>
+</p>
+<p>
+Vote for van Kuller!<br>
+Vote for van Kuller!<br>
+Vote for van Kuller!<br>
+Vote for van Kuller!<br>
+</p>
+
+
+
   </div>
-
-  <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto sculti"  src="./sculti2.jpg" alt="Christine Sculti">
-   </div>
-
-  <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto sculti"  src="./sculti1.jpg" alt="Christine Sculti">
-   </div>
-  
-    
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
- </div>
-
-
-  <div class="container mt-5 mb-5">
-    <figure>
-  <img class="img-fluid mx-auto annamaria"  src="./scappaticci.jpg" alt="">
-  <figcaption>Honored to march in the Town of Harrison Memorial Day parade with Thomas Scappaticci, Republican candidate for Mayor/Supervisor, a wonderful host. </figcaption>
-  </figure>
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto annamaria"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto bareburger"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto davetalking"  src="./davetalking.jpg" alt="talking with Dave Matthews in Rye">
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto park"  src="./friendinpark.jpg" alt="Talking in park">
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto boiano"  src="./boiano.jpg" alt="Boiano Bakery">
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto coriander"  src="./corainder.JPG" alt="Coriander in Larchmont">
- </div>
-
-<div class="container mt-5 mb-5">
- <img class="img-fluid mx-auto cosmo"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
-</div>
-
-
-<div class="container mt-5 mb-5">
- <img class="img-fluid mx-auto station"  src="./mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
-</div>
-<div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto larchmont"  src="./kurttalkinglarchmont.jpg" alt="Larchmont">
- </div>
-<div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./brenda.JPG" alt="Brenda">
- </div>
- 
-
-</div>
-
-<footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
+</section>
+      <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
   Powered by <strong>KullerCode</strong>
+
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./script.js"></script>
 
