--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
+          <li class="nav-item"><a class="nav-link" href="./campaignsong.html">Campaign Song</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
           <li class="nav-item"><a class="nav-link btn button" href="https://secure.anedot.com/friends-of-kurt-van-kuller/donate">DONATE</a></li>
         </ul>
