--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -116,6 +116,10 @@
 <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto brenda"  src="./brenda.JPG" alt="Brenda">
  </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto cocmamo"  src="./cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
+ </div>
  
 
 </div>
