added caption to mamo commerce

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -118,8 +118,11 @@
  </div>
 
  <div class="container mt-5 mb-5">
+  <figure>
   <img class="img-fluid mx-auto cocmamo"  src="./cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
- </div>
+    <figcaption><uppercase>SPEAKING TO MAMARONECK CHAMBER OF COMMERCE MEMBERS</uppercase> at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
+</figure>
+</div>
  
 
 </div>
