added harrison town hall pic

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -123,7 +123,12 @@
     <figcaption><uppercase>SPEAKING TO MAMARONECK CHAMBER OF COMMERCE MEMBERS</uppercase> at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
 </figure>
 </div>
- 
+ <div class="container mt-5 mb-5">
+  <figure>
+    <img class="img-fluid mx-auto hthall" src="./harrisontownhall.jpeg" alt="Harrison Town Hall">
+      <figcaption>Addressing the audience at a Harrison Town Hall for candidates Tom Scappaticci (for Mayor/Supervisor), Art Troilo, and Ray Colasacco (for Trustees).</figcaption>
+  </figure>
+ </div>
 
 </div>
 
