added election day, koc photo

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -81,7 +81,14 @@
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto annamaria"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
  </div>
+<div class="container mt-5 mb-5">
+  <figure>
+    <img class="img-fluid mx-auto koc" src="./koc.jpg" alt="At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik. ">
+    <figcaption>At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik.</figcaption>
+  </figure>
+  </div>
 
+</div>
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto bareburger"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
  </div>
