--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
       <li><strong>Support families and intelligent discussion</strong></li>
     </ol>
   </div>
+  <div class="greybg container text-center mb-5">
+    <h3>Election Day November 4th</h3>
+  </div>
 
   <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
     Powered by <strong>KullerCode</strong>
