deleted JS dom lang for bootstrap hamburger existing functionality and added the countdown timer

--- a/endorsements.html
+++ b/endorsements.html
@@ -39,6 +39,7 @@
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
+          <li class="nav-item"><a class="nav-link" href="./campaignsong.html">Campaign Song</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
           <li class="nav-item"><a class="nav-link btn button" href="https://secure.anedot.com/friends-of-kurt-van-kuller/donate">DONATE</a></li>
         </ul>
@@ -73,6 +74,6 @@ Write: Page in Progress then have some blank thumbnails or boxes to the side of 
   Powered by <strong>KullerCode</strong>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./script.js"></script>
+<script src="./script.js" defer></script>
 </body>
 </html>
