--- a/index.html
+++ b/index.html
@@ -91,12 +91,19 @@
   </div>
   <div class="greybg container text-center mb-5">
     <h3>Election Day November 4th</h3>
+    <h3>Polls open 6AM to 9PM</h3>
+  <div id="countdown">
+    <div class="unit"><span id="days">--</span><span class="label">Days</span></div>
+    <div class="unit"><span id="hours">--</span><span class="label">Hours</span></div>
+    <div class="unit"><span id="minutes">--</span><span class="label">Minutes</span></div>
+    <div class="unit"><span id="seconds">--</span><span class="label">Seconds</span></div>
+  </div>
   </div>
 
   <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
     Powered by <strong>KullerCode</strong>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
 </body>
 </html>
