--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -143,7 +143,7 @@
   Powered by <strong>KullerCode</strong>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./script.js"></script>
+<script src="./script.js" defer></script>
 
 </body>
 </html>
