--- a/campaignsong.html
+++ b/campaignsong.html
@@ -105,7 +105,7 @@ Vote for van Kuller!<br>
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./script.js"></script>
+<script src="./script.js" defer></script>
 
 </body>
 </html>
