--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -74,7 +74,7 @@
   <div class="container mt-5 mb-5">
     <figure>
   <img class="img-fluid mx-auto annamaria"  src="./scappaticci.jpg" alt="">
-  <figcaption>Honored to march in the Town of Harrison Memorial Day parade with Thomas Scappaticci, Republican candidate for Mayor/Supervisor, a wonderful host. </figcaption>
+  <figcaption class="text-center">Honored to march in the Town of Harrison Memorial Day parade with Thomas Scappaticci, Republican candidate for Mayor/Supervisor, a wonderful host. </figcaption>
   </figure>
  </div>
 
@@ -84,7 +84,7 @@
 <div class="container mt-5 mb-5">
   <figure>
     <img class="img-fluid mx-auto koc" src="./koc.jpg" alt="At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik. ">
-    <figcaption>At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik.</figcaption>
+    <figcaption class="text-center">At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik.</figcaption>
   </figure>
   </div>
 
@@ -127,13 +127,13 @@
  <div class="container mt-5 mb-5">
   <figure>
   <img class="img-fluid mx-auto cocmamo"  src="./cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
-    <figcaption><uppercase>SPEAKING TO MAMARONECK CHAMBER OF COMMERCE MEMBERS</uppercase> at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
+    <figcaption class="text-center text-uppercase">SPEAKING TO MAMARONECK CHAMBER OF COMMERCE MEMBERS at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
 </figure>
 </div>
  <div class="container mt-5 mb-5">
   <figure>
     <img class="img-fluid mx-auto hthall" src="./harrisontownhall.jpeg" alt="Harrison Town Hall">
-      <figcaption>Addressing the audience at a Harrison Town Hall for candidates Tom Scappaticci (for Mayor/Supervisor), Art Troilo, and Ray Colasacco (for Trustees).</figcaption>
+      <figcaption class="text-center">Addressing the audience at a Harrison Town Hall for candidates Tom Scappaticci (for Mayor/Supervisor), Art Troilo, and Ray Colasacco (for Trustees).</figcaption>
   </figure>
  </div>
 
