--- a/index.html
+++ b/index.html
@@ -92,12 +92,15 @@
   <div class="greybg container text-center mb-5">
     <h3>Election Day November 4th</h3>
     <h3>Polls open 6AM to 9PM</h3>
+    
+
   <div id="countdown">
     <div class="unit"><span id="days">--</span><span class="label">Days</span></div>
     <div class="unit"><span id="hours">--</span><span class="label">Hours</span></div>
     <div class="unit"><span id="minutes">--</span><span class="label">Minutes</span></div>
     <div class="unit"><span id="seconds">--</span><span class="label">Seconds</span></div>
   </div>
+  <h3>Early Voting: October 25th - November 2nd</h3>
   </div>
 
   <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
