added two more pics

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -136,6 +136,15 @@
       <figcaption class="text-center">Addressing the audience at a Harrison Town Hall for candidates Tom Scappaticci (for Mayor/Supervisor), Art Troilo, and Ray Colasacco (for Trustees).</figcaption>
   </figure>
  </div>
+ <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto hthall" src="./peterandsophia.jpg" alt=""> 
+ </div>
+  <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto hthall" src="./websters.jpg" alt="Webster's Groceries"> 
+ </div>
+  <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto hthall" src="./carvel.jpg" alt="Officer at Carvel"> 
+ </div>
 
 </div>
 
