--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -63,11 +63,19 @@
   <div class="container mt-5 mb-5">
     <img class="img-fluid mx-auto sculti"  src="./sculti1.jpg" alt="Christine Sculti">
    </div>
+
+   <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto toms"  src="./toms.jpg" alt="Tom S">
+   </div>
   
     
 
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto libraryphoto"  src="./ryefundraiser.jpg" alt="Kurt outside Rye Free Reading Room">
  </div>
 
 
@@ -144,6 +152,9 @@
  </div>
   <div class="container mt-5 mb-5">
     <img class="img-fluid mx-auto hthall" src="./carvel.jpg" alt="Officer at Carvel"> 
+ </div>
+  <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto hthall" src="./kurtdiana.jpg" alt="Kurt & Diana"> 
  </div>
 
 </div>
