added kurt speaking

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -131,6 +131,9 @@
 <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto brenda"  src="./brenda.JPG" alt="Brenda">
  </div>
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./kurtspeakstocrowd.jpg" alt="Kurt speaks to crowd">
+ </div>
 
  <div class="container mt-5 mb-5">
   <figure>
