added sculti pic

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -64,6 +64,10 @@
     <img class="img-fluid mx-auto sculti"  src="./sculti1.jpg" alt="Christine Sculti">
    </div>
 
+     <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto sculti"  src="./sculti.png" alt="Christine Sculti">
+   </div>
+
    <div class="container mt-5 mb-5">
     <img class="img-fluid mx-auto toms"  src="./toms.jpg" alt="Tom S">
    </div>
