added all photos

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -139,6 +139,39 @@
   <img class="img-fluid mx-auto brenda"  src="./kurtspeakstocrowd.jpg" alt="Kurt speaks to crowd">
  </div>
 
+<div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./mamospeaking.jpg" alt="Brenda">
+ </div>
+
+<div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./mamomeeting.jpg" alt="Brenda">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda elk"  src="./ElksLodgeBBQ6-14-25.jpg" alt="Brenda">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./fireparadeguys.jpg" alt="Fireman's Parade">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./firemanparade2.jpg" alt="Fireman's Parade">
+ </div>
+
+ 
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./firemansparade.jpg" alt="Fireman's Parade">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./firemansparadelady.jpg" alt="Fireman's Parade">
+ </div>
+
+
+
+
+
  <div class="container mt-5 mb-5">
   <figure>
   <img class="img-fluid mx-auto cocmamo"  src="./cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
