--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -47,10 +47,13 @@
           </div>
         </div>
       </nav>
-
-      <div class="container greybgexp mt-4 text-center">
+<div class="container mt-5 mb-5">
+  <div class="container greybgexp mt-4 text-center">
         <h2>Around District 7</h2>
       </div>
+  <div class="photo-grid">
+
+      
 
   <div class="container mt-5 mb-5 addbgcolor">
     <img class="img-fluid district7 mx-auto" src="./district7.jpg" alt="Map of District 7"/>
@@ -72,7 +75,6 @@
     <img class="img-fluid mx-auto toms"  src="./toms.jpg" alt="Tom S">
    </div>
   
-    
 
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
@@ -100,7 +102,7 @@
   </figure>
   </div>
 
-</div>
+
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto bareburger"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
  </div>
@@ -198,7 +200,8 @@
  </div>
 
 </div>
-
+ </div>
+</div>
 <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
   Powered by <strong>KullerCode</strong>
 </footer>
