--- a/experience.html
+++ b/experience.html
@@ -61,7 +61,7 @@
   </div>
 
   <div class="container greybgexp">
-    <p><strong><u>Longtime Rye homeowner.</u></strong> Raised two sons through Rye public schools. Married 37 years to Diana, member of Screen Actors Guild. Homeowner near Rye Town Park. Native to NYC and Westchester. 9/11 Survivor.</p>
+    <p><strong><u>Longtime Rye homeowner.</u></strong> Raised two sons through Rye public schools. Married 37 years to Diana, member of Screen Actors Guild. Homeowner near Rye Town Park. Native to NYC and Westchester.</p>
   </div>
 
   <div class="container text-center mt-4">
