created images folder

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -135,7 +135,7 @@
   <img class="img-fluid mx-auto larchmont"  src="./kurttalkinglarchmont.jpg" alt="Larchmont">
  </div>
 <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./brenda.JPG" alt="Brenda">
+  <img class="img-fluid mx-auto brenda"  src="./images/brenda.JPG" alt="Brenda">
  </div>
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto brenda"  src="./kurtspeakstocrowd.jpg" alt="Kurt speaks to crowd">
