added more photos

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -93,7 +93,7 @@
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto annamaria"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
+  <img class="img-fluid mx-auto annamaria"  src="./images/annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
  </div>
 <div class="container mt-5 mb-5">
   <figure>
@@ -116,11 +116,11 @@
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto boiano"  src="./boiano.jpg" alt="Boiano Bakery">
+  <img class="img-fluid mx-auto boiano"  src="./images/boiano.jpg" alt="Boiano Bakery">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto coriander"  src="./corainder.JPG" alt="Coriander in Larchmont">
+  <img class="img-fluid mx-auto coriander"  src="./images/corainder.JPG" alt="Coriander in Larchmont">
  </div>
 
 <div class="container mt-5 mb-5">
@@ -176,7 +176,7 @@
 
  <div class="container mt-5 mb-5">
   <figure>
-  <img class="img-fluid mx-auto cocmamo"  src="./cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
+  <img class="img-fluid mx-auto cocmamo"  src="./images/cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
     <figcaption class="text-center text-uppercase">SPEAKING TO MAMARONECK CHAMBER OF COMMERCE MEMBERS at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
 </figure>
 </div>
@@ -193,7 +193,7 @@
     <img class="img-fluid mx-auto hthall" src="./websters.jpg" alt="Webster's Groceries"> 
  </div>
   <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto hthall" src="./carvel.jpg" alt="Officer at Carvel"> 
+    <img class="img-fluid mx-auto hthall" src="./images/carvel.jpg" alt="Officer at Carvel"> 
  </div>
   <div class="container mt-5 mb-5">
     <img class="img-fluid mx-auto hthall" src="./kurtdiana.jpg" alt="Kurt & Diana"> 
