--- a/ontheissues.html
+++ b/ontheissues.html
@@ -104,7 +104,7 @@
     </ul>
     
 
-      <img class="kvkfamily img-fluid d-block mx-auto " src="./croppedfamilyphoto.jpg" alt="Kurt with family" />
+      <img class="kvkfamily img-fluid d-block mx-auto " src="./images/croppedfamilyphoto.jpg" alt="Kurt with family" />
   
   </div>
 
