more updates to folder images

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -101,6 +101,10 @@
     <figcaption class="text-center">At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik.</figcaption>
   </figure>
   </div>
+ <div class="container mt-5 mb-5">
+
+  <img class="img-fluid mx-auto"  src="./images/anantblockparty.jpg" alt="">
+ </div>
 
 
  <div class="container mt-5 mb-5">
@@ -124,7 +128,7 @@
  </div>
 
 <div class="container mt-5 mb-5">
- <img class="img-fluid mx-auto cosmo"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+ <img class="img-fluid mx-auto cosmo"  src="./images/cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
 
 
